# archi-lawyer

./: .env-template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  archi_lawyer.py  pyproject.toml
.github/workflows/: ci.yaml
environments/: archi-lawyer.yaml  archi-prawnik.yaml  infrastructure.yaml
src/: embed_gen.py  main.py  pdf_loader.py  preprocess_data.py  upload_data.py  vector_store.py  vector_store_old.py  warunki_techniczne.py
src/common/consts/: __init__.py  directories.py  logger.py
src/common/settings/: base.py
src/common/utils/: logger.py  serialization.py
tests/: test_dummy.py
