[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.flake8]
max-line-length = 120
exclude = [ ".git", "__pycache__", "build", "dist", "venv", ".venv", ".mypy_cache", ".tox",]
extend-ignore = [ "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "E203", "W503"]


[tool.isort]
profile = "black"
line_length = 120
skip = [
    "venv",
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
]
known_first_party = "src"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "retry"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark test as an integration test.",
    "e2e: mark test as an end to end test.",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
